// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Profile Tab should show 1`] = `
<div
  className="grid"
>
  <div
    className="breadCrumb"
  >
    <FilterBreadCrumb
      filter={
        Object {
          "benchmark": Object {
            "name": "benchmark",
          },
          "property": Object {
            "name": "property",
          },
        }
      }
    />
  </div>
  <div
    className="container"
  >
    <div
      className="row row-grid"
    >
      <div
        className="col-6"
      >
        <DashboardGraphModule
          benchmarkTitle="benchmark"
          data={null}
          description="Which of the following do you use to interact with or follow the Premier League or your favorite Premier League team?"
          isFetching={false}
          propertyTitle="property"
          sideTitle="Activites"
          title="Interacting with Premier League"
          type="PERCENT"
        />
        <DashboardGraphModule
          benchmarkTitle="benchmark"
          data={null}
          isFetching={false}
          propertyTitle="property"
          title="Sport Watching"
          type="PERCENT"
        />
      </div>
      <div
        className="col-6"
      >
        <DashboardGraphModule
          benchmarkTitle="benchmark"
          data={null}
          description="How often do you do the following?"
          isFetching={false}
          propertyTitle="property"
          title="While Watching Sports"
          type="PERCENT"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Media Profile Tab should show loading 1`] = `
<div
  className="grid"
>
  <div
    className="breadCrumb"
  >
    <FilterBreadCrumb
      filter={
        Object {
          "benchmark": Object {
            "name": "benchmark",
          },
          "property": Object {
            "name": "property",
          },
        }
      }
    />
  </div>
  <div
    className="container"
  >
    <div
      className="row row-grid"
    >
      <div
        className="col-6"
      >
        <DashboardGraphModule
          benchmarkTitle="benchmark"
          data={null}
          description="Which of the following do you use to interact with or follow the Premier League or your favorite Premier League team?"
          isFetching={true}
          propertyTitle="property"
          sideTitle="Activites"
          title="Interacting with Premier League"
          type="PERCENT"
        />
        <DashboardGraphModule
          benchmarkTitle="benchmark"
          data={null}
          isFetching={true}
          propertyTitle="property"
          title="Sport Watching"
          type="PERCENT"
        />
      </div>
      <div
        className="col-6"
      >
        <DashboardGraphModule
          benchmarkTitle="benchmark"
          data={null}
          description="How often do you do the following?"
          isFetching={true}
          propertyTitle="property"
          title="While Watching Sports"
          type="PERCENT"
        />
      </div>
    </div>
  </div>
</div>
`;
